# worktrunk

./: .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  ISSUE.md  README.md  TERMIMAD-COLORS.md  TODO.md  Taskfile.yaml  default_16038749127235320115_0_42549.profraw  default_16038749127235320115_0_88478.profraw  default_16038749127235320115_0_98828.profraw  flake.nix
.claude/rules/: caching-strategy.md  cli-output-formatting.md  output-system-architecture.md
.config/: lychee.toml  wt.toml
.github/workflows/: build-docs.yaml  build-docs.yml  ci.yaml  ci.yml  claude-ci-fix.yaml  claude-mention.yaml  claude.yaml  release.yaml  release.yml  tier-2-integration-tests.yml
benches/: CLAUDE.md  list.rs
dev/: config.example.toml  publish-assets  setup-claude-code-web.sh  wt-demo-build  wt-demo-build.sh  wt.example.toml
dev/wt-demo/: CLAUDE.md  demo.tape
docs/: CLAUDE.md  config.toml
docs/content/: advanced.md  claude-code.md  concepts.md  config.md  faq.md  hook.md  hooks.md  list.md  llm-commits.md  merge.md  quickstart.md  remove.md  select.md  step.md  switch.md  tips-patterns.md  why-worktrunk.md  worktrunk.md
docs/demos/: CLAUDE.md  build
docs/sass/: custom.scss
docs/static/: search.js
docs/templates/: _variables.html  base.html
fish-functions/: git-worktree-finish.fish  git-worktree-llm.fish  git-worktree-merge.fish  git-worktree-push.fish  git-worktree-switch.fish
scripts/: publish-assets
src/: cli.rs  completion.rs  config.rs  diagnostic.rs  display.rs  git.rs  git_parse_test.rs  help.rs  help_pager.rs  help_resolver.rs  lib.rs  llm.rs  main.rs  md_help.rs  path.rs  shell.rs  shell_exec.rs  styling.rs  utils.rs
src/cli/: mod.rs  step.rs
src/commands/: beta.rs  command_approval.rs  command_executor.rs  commit.rs  completion.rs  config.rs  configure_shell.rs  context.rs  dev.rs  for_each.rs  handle_switch.rs  hook_commands.rs  hook_filter.rs  hooks.rs  init.rs  merge.rs  mod.rs  process.rs  repository_ext.rs  select.rs  standalone.rs  statusline.rs  step_commands.rs  worktree.rs
src/config/: commands.rs  deprecation.rs  expansion.rs  mod.rs  project.rs  test.rs  user.rs
src/git/: diff.rs  error.rs  mod.rs  pr_ref.rs  semaphore.rs  test.rs
src/output/: directive.rs  global.rs  handlers.rs  interactive.rs  mod.rs
src/shell/: detection.rs  (+2 more)
templates/: bash.sh  elvish.elv  fish.fish  nushell.nu  posix_directives.sh  powershell.ps1  xonsh.xsh  zsh.zsh
tests/: plugin_sync.rs
tests/helpers/dev-detach/: Cargo.toml
tests/helpers/dev-detach/src/: setup-select-test.rs
tests/helpers/mock-stub/: Cargo.toml
(+970 files in other folders)
